Revision history for FusionInventory::Agent::Task::NetDiscovery

1.3
       * Raise an error if an important dependency is missing

1.2
       * Manage dico in storage, so can be get new dico from server
       * Add each manufacturer specification in a different package
       * Add Dell switch detection
       * Fix detection of kyocera
       * Fix ricoh discovery file
       * Fix problem detection on Wyse computers (5150 get serial number)
       * Fix detection of many devices
       * Add specifications of epson printers
       * Delete many dots in some serial numbers

       * Silently exit if started in local mode

1.1
       * Drop the dependency on File::stat
       * add a POD doc
       * Improve the README
       * Add a test script: t/use.t
       * Add MODULEVERSION in XML
       * Add support of a certain type of KYOCERA printer server
       * Add support of dd-wrt firmware in routers
       * Update dico for devices detection
       * Remove space before and after serial number
       * Fix mac address in SNMP
       * Fix to get mac address of device when it is in dico but not have oid for mac address
       * Add sleep for 1 second between two send to server
       * Fix for sometimes IP scanned 2 times
       * Fix send starting discovery to server many times in a certain case

1.0    Sun, 28 Mar 2010 22:49:57 +0200
       * Initial independent release of the module