@@ -12,7 +12,6 @@ requires 'XML::Simple' => undef;
 requires 'Net::IP' => undef;
 requires 'Parallel::ForkManager' => undef;
 requires 'Net::SNMP' => undef;
-requires 'Nmap::Parser' => undef;
 requires 'Net::NBName' => undef;
 WriteAll;
 
